# Pandora

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  NOTICE  README.md  meson.build  meson.options  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties  version.py  version.sh
.github/workflows/: pandora_ci.yml
.gitlab/issue_templates/: Bug.md  Patch_anterieur_dernier_tag.md  Proposition.md  Release.md  Release_ENG.md
.gitlab/merge_request_templates/: MR.md
.travis/: github_deploy_key.enc  on_success.sh
conf/: medicis.json
data_samples/images/: README.md
data_samples/json_conf_files/: README.md  a_local_block_matching.json  a_local_block_matching_for_multiband_img.json  a_semi_global_matching.json  a_semi_global_matching_with_confidence.json  a_semi_global_matching_with_mccnn_similarity_measure.json
doc/: Makefile  make.bat
doc/sources/: api_reference.rst  conf.py  developer_guide.rst  getting_started.rst  index.rst  userguide.rst
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  developer_guide.rst  exploring_the_field.rst  getting_started.rst  index.rst  userguide.rst
notebooks/: introduction_and_basic_usage.ipynb  notebook_requirements.txt  statistical_and_visual_analysis.ipynb  usage_with_multiscale.ipynb
notebooks/advanced_examples/: api_check_conf.ipynb  cost_profile_analysis.ipynb
notebooks/data/: Cones_stereo_param.json  left_rgb.tif
notebooks/snippets/: utils.py
pandora/: JSON_checker.py  Pandora.py  __init__.py  check_configuration.py  check_json.py  common.py  constants.py  criteria.py  disparity.py  img_tools.py  interval_tools.py  json_checker.py  marge.py  output_tree_design.py  state_machine.py
pandora/aggregation/: __init__.py  aggregation.py  cbca.py
pandora/confidence/: __init__.py  ambiguity.py  confidence.py  std_intensity.py
pandora/cost_volume_confidence/: __init__.py  ambiguity.py  cost_volume_confidence.py  interval_bounds.py  risk.py  std_intensity.py
pandora/cost_volume_confidence/cpp/: ambiguity.cpp  bindings.cpp  cost_volume_confidence_cpp.pyi  interval_bounds.cpp  meson.build  risk.cpp
pandora/cost_volume_confidence/cpp/includes/: ambiguity.hpp  cost_volume_confidence_tools.hpp  interval_bounds.hpp  risk.hpp
pandora/cost_volume_confidence/cpp/src/: ambiguity.cpp  bindings.cpp  cost_volume_confidence_tools.cpp  interval_bounds.cpp  risk.cpp
pandora/cpp/: bindings_img_tools.cpp  bindings_interval_tools.cpp  img_tools.cpp  img_tools_cpp.pyi  interval_tools.cpp  interval_tools_cpp.pyi  meson.build
pandora/cpp/includes/: img_tools.hpp  interval_tools.hpp
pandora/cpp/src/: bindings_img_tools.cpp  bindings_interval_tools.cpp  img_tools.cpp  interval_tools.cpp
pandora/descriptors/: margins.py
pandora/disparity/: __init__.py  disparity.py
pandora/filter/: __init__.py  bilateral.py  filter.py  median.py  median_for_intervals.py
pandora/margins/: __init__.py  descriptors.py  margins.py
pandora/matching_cost/: __init__.py  census.py  lib_c.cpp  matching_cost.py  sad_ssd.py  zncc.py
pandora/multiscale/: __init__.py  fixed_zoom_pyramid.py  multiscale.py
pandora/optimization/: __init__.py  optimization.py
pandora/refinement/: __init__.py  quadratic.py  refinement.py  vfit.py
pandora/semantic_segmentation/: __init__.py  semantic_segmentation.py
pandora/stereo/: __init__.py  census.py  sad_ssd.py  stereo.py  zncc.py
pandora/validation/: __init__.py  interpolated_disparity.py  validation.py
src/pandora/: Pandora.py  __init__.py  check_configuration.py  common.py  constants.py  criteria.py  img_tools.py  interval_tools.py  marge.py  output_tree_design.py  profiler.py  state_machine.py
src/pandora/cost_volume_confidence/cpp/: cost_volume_confidence_cpp.pyi  meson.build
src/pandora/cost_volume_confidence/cpp/includes/: ambiguity.hpp  cost_volume_confidence_tools.hpp  interval_bounds.hpp  risk.hpp
src/pandora/cost_volume_confidence/cpp/src/: ambiguity.cpp  bindings.cpp  cost_volume_confidence_tools.cpp  interval_bounds.cpp  risk.cpp
src/pandora/cpp/: __init__.py  criteria_cpp.pyi  img_tools_cpp.pyi  interval_tools_cpp.pyi  meson.build
src/pandora/cpp/includes/: criteria.hpp  img_tools.hpp  interval_tools.hpp
src/pandora/cpp/src/: bindings_criteria.cpp  bindings_img_tools.cpp  bindings_interval_tools.cpp  criteria.cpp  img_tools.cpp  interval_tools.cpp
src/pandora/matching_cost/cpp/: matching_cost_cpp.pyi  meson.build
src/pandora/matching_cost/cpp/includes/: census.hpp  matching_cost.hpp
src/pandora/matching_cost/cpp/src/: bindings.cpp  census.cpp  matching_cost.cpp
src/pandora/refinement/cpp/: meson.build  refinement_cpp.pyi
src/pandora/refinement/cpp/includes/: quadratic.hpp  refinement.hpp  refinement_tools.hpp  vfit.hpp
src/pandora/refinement/cpp/src/: bindings.cpp  quadratic.cpp  refinement.cpp  refinement_tools.cpp  vfit.cpp
tests/: common.py  conftest.py  test_aggregation.py  test_check_configuration.py  test_common.py  test_confidence.py  test_config.py  test_criteria.py  test_disparity.py  test_disparity_denoiser.py  test_disparity_mask.py  test_filter.py  test_interval_tools.py  test_marge.py  test_matching_cost.py  test_matching_cost_census.py  test_matching_cost_sad.py  test_matching_cost_ssd.py  test_matching_cost_zncc.py  test_multiscale.py  test_notebooks.py  test_optimization.py  test_pandora.py  test_pandora_image.py  test_pandora_machine.py  test_pandoramachine.py  test_plugins.py  test_profiling.py  test_refinement.py  test_stereo.py  test_validation.py
tests/functional_tests/: test_basic.py  test_profiling.py  test_validation.py
tests/image/: left_img.tif  left_img_nan.tif  mask_left.tif
tests/pandora/: cfg.json  disp_max_grid.tif  disp_min_grid.tif  disp_ref.tif  disp_sec.tif  left_classif.tif  left_disparity_grid.tif  left_rgb.tif  mask_from_occlusion_left.tif  right_classif.tif  right_disp_min_grid.tif  right_rgb.tif  (+3 more)
tests/test_cpp/test_confidence/: meson.build  test_confidence.cpp
(+208 files in other folders)
