#!/usr/bin/env python
# coding: utf8
#
# Copyright (c) 2020 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of PANDORA
#
#     https://github.com/CNES/Pandora
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Pandora setup configuration file

# package setup main metadata
[metadata]
name = pandora
description = Pandora is a stereo matching framework that helps emulate state of the art algorithms
long_description_content_type = text/markdown
author = CNES
author_email = myriam.cournet@cnes.fr
url = https://github.com/CNES/Pandora
license = Apache License 2.0
license_files = LICENSE

[options]
python_requires >=3.7

setup_requires =
    setuptools>=65.5
    setuptools_scm[toml]>=6.2 # Following https://pypi.org/project/setuptools-scm/
    wheel

# Pandora packages dependencies
install_requires =
    numpy
    xarray>=0.13.0
    scipy
    rasterio
    json-checker
    numba>=0.55.2;python_version>'3.7'
    numba>=0.47.0;python_version<'3.8'
    transitions
    scikit-image>=0.19.0

package_dir =
    . = pandora
packages = find:


[options.extras_require]
dev =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi
    pytest
    pytest-cov
    pylint
    pre-commit
    mypy
    black
    types-setuptools
    build

sgm =
    pandora_plugin_libsgm==1.2.*

mccnn =
    pandora_plugin_mccnn==1.1.*

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi

notebook =
    jupyter-dash
    plotly
    bokeh
    matplotlib<=3.5.3
    graphviz
    notebook
    ipykernel

# Pandora entry points cli scripts
[options.entry_points]
console_scripts =
    pandora = pandora.Pandora:main
